Added skeleton navigation drawer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">Simple Reddit Reader</string>
     <string name="action_settings">Settings</string>
+    <string name="no_listings_found">No listings found</string>
 
 </resources>
