--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="drawer_random_subreddit">Random Subreddit</string>
     <string name="front_page_title">front page</string>
     <string name="title_activity_listings">ListingsActivity</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="no_comments_found">No comments found</string>
+    <string name="fragment_comments_title">Comments</string>
 
 </resources>
