Added menu items for sort and timespan

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,7 @@
     <string name="title_activity_listings">ListingsActivity</string>
     <string name="no_comments_found">No comments found</string>
     <string name="fragment_comments_title">Comments</string>
+    <string name="action_change_sort">Sort</string>
+    <string name="action_change_timespan">Timespan</string>
 
 </resources>
