Added sort dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="fragment_comments_title">Comments</string>
     <string name="action_change_sort">Sort</string>
     <string name="action_change_timespan">Timespan</string>
+    <string name="choose_sort">Sort by</string>
 
 </resources>
