Added API calls for voting on links

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="action_save">save</string>
     <string name="action_open_in_browser">view in browser</string>
     <string name="action_report">report</string>
+    <string name="vote_failed">Failed to cast vote, please try again</string>
 
 </resources>
