--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="action_report">report</string>
     <string name="vote_failed">Failed to cast vote, please try again</string>
     <string name="go_to_subreddit">Go to subreddit</string>
+    <string name="action_refresh">Refresh</string>
 
 </resources>
