--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Simple Reddit Reader</string>
+    <string name="app_name">Simple Reader for Reddit</string>
     <string name="action_settings">Settings</string>
     <string name="no_listings_found">No listings found</string>
     <string name="drawer_open">Open navigation drawer</string>
