--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,7 @@
     <string name="vote_failed">Failed to cast vote, please try again</string>
     <string name="go_to_subreddit">Go to subreddit</string>
     <string name="action_refresh">Refresh</string>
+    <string name="link_score_default">•</string>
+    <string name="comment_score_unit">points</string>
 
 </resources>
