--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,6 @@
     <string name="comment_score_unit">points</string>
     <string name="action_open_comments_in_browser">view comments in browser</string>
     <string name="more_comments">view more comments</string>
+    <string name="continue_thread">continue thread</string>
 
 </resources>
