Rearranged link layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="more_comments">view more comments</string>
     <string name="continue_thread">continue thread</string>
     <string name="default_comment_sort">hot</string>
+    <string name="comments_fragment_default_title">Comments</string>
 
 </resources>
