--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,7 @@
             Vestibulum molestie auctor maximus. Ut euismod ipsum velit, eu iaculis quam fermentum blandit.</string>
     <string name="save_failed">Failed to save, please try again</string>
     <string name="action_unsave">unsave</string>
+    <string name="unauthenticated">Not signed in</string>
+    <string name="sign_out_cs">Sign out</string>
 
 </resources>
