--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,9 @@
     <string name="sign_out_cs">Sign out</string>
     <string name="action_hide">hide</string>
     <string name="hide_failed">Failed to hide link, please try again</string>
+    <string name="confirm_sign_out_dialog_title">Sign Out</string>
+    <string name="confirm_sign_out_dialog_message">Sign out from user account?</string>
+    <string name="confirm_sign_out_dialog_ok">OK</string>
+    <string name="confirm_sign_out_dialog_cancel">Cancel</string>
 
 </resources>
