--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,12 +45,6 @@
     <string name="account_name_unauthorized">Not signed in</string>
     <string name="subreddit_prefix">/r/%s</string>
     <string name="link_saved_text">[saved]</string>
-
-    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at velit ex.
-            Aliquam vitae tellus eget dolor rutrum bibendum bibendum ac mauris. Morbi dui sapien, efficitur eget
-            dui et, blandit vulputate quam. Sed vehicula, mauris ac sollicitudin commodo, risus tortor imperdiet ipsum,
-            id consequat eros velit eget leo. Aliquam at purus tincidunt ipsum blandit fermentum eget quis risus.
-            Vestibulum molestie auctor maximus. Ut euismod ipsum velit, eu iaculis quam fermentum blandit.</string>
     <string name="save_failed">Failed to save, please try again</string>
     <string name="action_unsave">unsave</string>
     <string name="unauthenticated">Not signed in</string>
@@ -61,5 +55,12 @@
     <string name="confirm_sign_out_dialog_message">Sign out from user account?</string>
     <string name="confirm_sign_out_dialog_ok">OK</string>
     <string name="confirm_sign_out_dialog_cancel">Cancel</string>
+    <string name="user_required">Login required</string>
+
+    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at velit ex.
+            Aliquam vitae tellus eget dolor rutrum bibendum bibendum ac mauris. Morbi dui sapien, efficitur eget
+            dui et, blandit vulputate quam. Sed vehicula, mauris ac sollicitudin commodo, risus tortor imperdiet ipsum,
+            id consequat eros velit eget leo. Aliquam at purus tincidunt ipsum blandit fermentum eget quis risus.
+            Vestibulum molestie auctor maximus. Ut euismod ipsum velit, eu iaculis quam fermentum blandit.</string>
 
 </resources>
