--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="comments_fragment_default_title">Comments</string>
     <string name="toast_authorized">Authorization granted</string>
     <string name="toast_not_authorized">Not authorized</string>
-    <string name="account_name_unauthorized">Not signed in</string>
+    <string name="account_name_unauthorized">not signed in</string>
     <string name="subreddit_prefix">/r/%s</string>
     <string name="link_saved_text">[saved]</string>
     <string name="save_failed">Failed to save, please try again</string>
