Fixed incorrect API call on tapping "Continue thread"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,5 +69,6 @@
             id consequat eros velit eget leo. Aliquam at purus tincidunt ipsum blandit fermentum eget quis risus.
             Vestibulum molestie auctor maximus. Ut euismod ipsum velit, eu iaculis quam fermentum blandit.</string>
     <string name="action_reply">reply</string>
+    <string name="implementation_tbd">Not yet implemented</string>
 
 </resources>
