--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Application -->
     <string name="app_name">Hold the Narwhal</string>
-    <string name="action_settings">Settings</string>
-    <string name="no_listings_found">No listings found</string>
+
+    <!-- Navigation drawer -->
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="drawer_navigate_to_subreddit_text">go to subreddit</string>
@@ -13,46 +14,66 @@
     <string name="drawer_front_page">front page</string>
     <string name="drawer_r_all">/r/all</string>
     <string name="drawer_random_subreddit">/r/random</string>
+    <string name="account_name_unauthorized">not signed in</string>
+
+    <!-- Links -->
     <string name="front_page_title">front page</string>
-    <string name="title_activity_listings">ListingsActivity</string>
-    <string name="no_comments_found">No comments found</string>
+    <string name="no_listings_found">No listings found</string>
+    <string name="link_score_default">•</string>
+    <string name="link_score">%s points</string>
+    <string name="link_gilded_text">&#160;× %s</string>
+    <string name="link_subreddit">/r/%s</string>
+    <string name="link_author">/u/%s</string>
+
+    <!-- Comments -->
+    <string name="comments_fragment_title">comments</string>
     <string name="fragment_comments_title">comments</string>
-    <string name="action_change_sort">Sort</string>
-    <string name="action_change_timespan">Timespan</string>
-    <string name="choose_sort">Sort by</string>
-    <string name="choose_timespan">Timespan</string>
+    <string name="no_comments_found">no comments found</string>
+    <string name="comment_score">%s</string>
+    <string name="continue_thread">continue thread</string>
+    <string name="more_comments">view %s more comments</string>
+
+    <!-- Context menus -->
+    <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="action_sort">Sort</string>
+    <string name="action_timespan">Timespan</string>
+    <string name="menu_sort_title">Sort by</string>
+    <string name="menu_timespan_title">Timespan</string>
     <string name="action_upvote">upvote</string>
     <string name="action_downvote">downvote</string>
     <string name="action_show_comments">show comments</string>
     <string name="action_share">share</string>
     <string name="action_save">save</string>
+    <string name="action_unsave">unsave</string>
+    <string name="action_hide">hide</string>
+    <string name="action_unhide">unhide</string>
     <string name="action_open_in_browser">view in browser</string>
-    <string name="action_report">report</string>
-    <string name="vote_failed">Failed to cast vote, please try again</string>
-    <string name="action_refresh">Refresh</string>
-    <string name="link_score_default">•</string>
-    <string name="gilded_text_view">&#160;× %s</string>
-    <string name="comment_score">%s</string> <!-- add units in other locales -->
     <string name="action_open_comments_in_browser">view comments in browser</string>
-    <string name="more_comments">view %s more comments</string>
-    <string name="continue_thread">continue thread</string>
+    <string name="action_report">report</string>
+    <string name="action_reply">reply</string>
+
+    <!-- Spinner -->
+    <string name="spinner_getting_submissions">Getting submissions&#8230;</string>
+
+    <!-- Dialogs -->
+    <string name="dialog_sign_out_title">Sign out</string>
+    <string name="dialog_sign_out_message">Sign out from user account?</string>
+    <string name="dialog_sign_out_ok">OK</string>
+    <string name="dialog_sign_out_cancel">Cancel</string>
+
+    <!-- Events -->
+    <string name="vote_failed">Vote failed, please try again</string>
+    <string name="save_failed">Save failed, please try again</string>
+    <string name="hide_failed">Hide failed, please try again</string>
+    <string name="link_hidden">Link hidden</string>
+
+    <!-- Miscellaneous -->
+    <string name="user_required">Login required</string>
+    <string name="implementation_pending">coming soon</string>
     <string name="default_comment_sort">hot</string>
     <string name="default_links_sort">hot</string>
     <string name="default_links_timespan">all</string>
-    <string name="comments_fragment_default_title">Comments</string>
-    <string name="account_name_unauthorized">not signed in</string>
-    <string name="subreddit_prefix">/r/%s</string>
-    <string name="save_failed">Failed to save, please try again</string>
-    <string name="action_unsave">unsave</string>
-    <string name="sign_out_cs">Sign out</string>
-    <string name="action_hide">hide</string>
-    <string name="action_unhide">unhide</string>
-    <string name="hide_failed">Failed to (un)hide link, please try again</string>
-    <string name="confirm_sign_out_dialog_title">Sign Out</string>
-    <string name="confirm_sign_out_dialog_message">Sign out from user account?</string>
-    <string name="confirm_sign_out_dialog_ok">OK</string>
-    <string name="confirm_sign_out_dialog_cancel">Cancel</string>
-    <string name="user_required">Login required</string>
     <string name="timespan_year">%s years ago</string>
     <string name="timespan_weeks">%s weeks ago</string>
     <string name="timespan_days">%s days ago</string>
@@ -60,11 +81,6 @@
     <string name="timespan_minutes">%s minutes ago</string>
     <string name="timespan_seconds">%s seconds ago</string>
     <string name="timespan_now">just now</string>
-    <string name="spinner_getting_submissions">Getting submissions&#8230;</string>
-    <string name="action_reply">reply</string>
-    <string name="implementation_pending">coming soon</string>
-    <string name="link_hidden">Link hidden</string>
-
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at velit ex.
             Aliquam vitae tellus eget dolor rutrum bibendum bibendum ac mauris. Morbi dui sapien, efficitur eget
             dui et, blandit vulputate quam. Sed vehicula, mauris ac sollicitudin commodo, risus tortor imperdiet ipsum,
