--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,12 +33,16 @@
     <string name="more_comments">view %s more comments</string>
 
     <!-- Context menus -->
+    <string name="menu_sort_title">Sort by</string>
+    <string name="menu_timespan_title">Timespan</string>
+    <string name="menu_action_link">%1$s &#091;%2$s&#093;</string>
+    <string name="menu_action_comment">&#091;%2$s&#093; /u/%1$s</string>
+    <!--<string name="menu_action_link">%s</string>-->
+    <!--<string name="menu_action_comment">%s</string>-->
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_sort">Sort</string>
     <string name="action_timespan">Timespan</string>
-    <string name="menu_sort_title">Sort by</string>
-    <string name="menu_timespan_title">Timespan</string>
     <string name="action_upvote">upvote</string>
     <string name="action_downvote">downvote</string>
     <string name="action_show_comments">show comments</string>
