--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="link_gilded_text">&#160;× %s</string>
     <string name="link_subreddit">/r/%s</string>
     <string name="link_author">/u/%s</string>
+    <string name="link_domain">(%s)</string>
+    <string name="link_comment_count">%s comments</string>
 
     <!-- Comments -->
     <string name="comments_fragment_title">comments</string>
