--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="action_share">share</string>
     <string name="action_save">save</string>
     <string name="action_unsave">unsave</string>
+    <string name="action_view_user_profile">View /u/%s</string>
     <string name="action_hide">hide</string>
     <string name="action_unhide">unhide</string>
     <string name="action_open_in_browser">view in browser</string>
