--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,12 @@
     <string name="navigation_tabs_hidden">hidden</string>
     <string name="navigation_tabs_saved">saved</string>
 
+    <!-- Settings -->
+    <string name="preferences_reddit">reddit</string>
+    <string name="preferences_app">HTN</string>
+    <string name="pref_enable_ads">Enable ads</string>
+    <string name="pref_enable_ads_summary">All proceeds are donated to charity</string>
+
     <!-- Context menus -->
     <string name="menu_sort_title">Sort by</string>
     <string name="menu_timespan_title">Timespan</string>
