Added basic AdView to ListingsAdapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,7 +96,7 @@
 
     <!-- AdMob -->
     <string name="ads_test_unit_id">ca-app-pub-3940256099942544/6300978111</string>
-    <string name="ads_banner_subreddit_listings">ca-app-pub-8702732471277092/5149537966</string>
+    <string name="ads_listings_banner_id">ca-app-pub-8702732471277092/5149537966</string>
 
     <!-- Miscellaneous -->
     <string name="username">/u/%s</string>
