--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="comment_score">%s</string>
     <string name="continue_thread">continue thread</string>
     <string name="more_comments">view %s more comments</string>
-    <string name="listing_comment_title_format">%s by /u/%s in /r/%s</string>
+    <string name="listing_comment_title_format">%1$s \nby /u/%2$s on /r/%3$s</string>
 
     <!-- User Profile -->
     <string name="navigation_tabs_overview">overview</string>
