--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,8 @@
     <string name="no_comments_found">no comments found</string>
     <string name="comment_score">%s</string>
     <string name="continue_thread">continue thread</string>
-    <string name="more_comments">view %s more comments</string>
+    <string name="more_comments_s">load 1 more comment</string>
+    <string name="more_comments">load %s more comments</string>
     <string name="listing_comment_title_format">%1$s \nby /u/%2$s on /r/%3$s</string>
 
     <!-- User Profile -->
