Added user-friendly error messaging

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
+  -->
+
 <resources>
 
     <!-- Application -->
@@ -91,6 +95,10 @@
     <string name="save_failed">save failed, please try again</string>
     <string name="hide_failed">hide failed, please try again</string>
     <string name="link_hidden">link hidden</string>
+    <string name="error_xxx">an error has occurred</string>
+    <string name="error_404">page not found</string>
+    <string name="error_500">reddit is experiencing issues, try again later</string>
+    <string name="error_503">reddit is unavailable, try again soon</string>
 
     <!-- Miscellaneous -->
     <string name="username">/u/%s</string>
